# Instrux_Master

./: .gitignore  README.md
VS_interperter/instrux_console/: .gitignore  CMakeLists.txt  CMakeSettings.json  instrux_console.cpp  instrux_console.h
VS_interperter/instrux_console/Console/: CMakeLists.txt
VS_interperter/instrux_console/Console/Debug/: console_lib.lib
VS_interperter/instrux_console/Console/Headers/: CMakeLists.txt  Console.h  cmake_install.cmake
VS_interperter/instrux_console/Console/cpp/: CMakeLists.txt  Console.cpp  cmake_install.cmake
VS_tooling/VSIX_project/: VSIX_project.csproj  VSIX_project.sln  VSIX_projectPackage.cs  source.extension.vsixmanifest
VS_tooling/VSIX_project/Properties/: AssemblyInfo.cs  Resources.Designer.cs
misc/cmake_cache/cmake_exe_dir/doc/cmake/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
misc/cmake_cache/cmake_exe_dir/doc/cmake/html/_static/: documentation_options.js
misc/cmake_cache/cmake_exe_dir/doc/cmake/html/command/: add_compile_definitions.html  add_compile_options.html  add_custom_command.html  add_custom_target.html  add_definitions.html  add_dependencies.html  add_executable.html  add_library.html  add_link_options.html  add_subdirectory.html  add_test.html  aux_source_directory.html  block.html  break.html  build_command.html  build_name.html  cmake_file_api.html  cmake_host_system_information.html  cmake_instrumentation.html  cmake_language.html  cmake_minimum_required.html  cmake_parse_arguments.html  cmake_path.html  (+107 more)
misc/cmake_cache/cmake_exe_dir/man/man1/: ccmake.1  cmake-gui.1  cmake.1  cpack.1  ctest.1
misc/cmake_cache/cmake_exe_dir/man/man7/: cmake-buildsystem.7  cmake-commands.7  cmake-compile-features.7  cmake-configure-log.7  cmake-cxxmodules.7  cmake-developer.7  cmake-env-variables.7  cmake-file-api.7  cmake-generator-expressions.7  cmake-generators.7  cmake-instrumentation.7  cmake-language.7  cmake-modules.7  cmake-packages.7  cmake-policies.7  cmake-presets.7  cmake-properties.7  cmake-qt.7  cmake-server.7  cmake-toolchains.7  cmake-variables.7  cpack-generators.7
(+2003 files in other folders)
